Fix tests, they now all pass